--- a/patterns/typography/helpers.styl
+++ b/patterns/typography/helpers.styl
@@ -14,7 +14,7 @@
 
     &ucase
         text-transform uppercase
-        letter-spacing .075em
+        letter-spacing .175em
 
     &capitalize
         text-transform capitalize
